fixed spacing

--- a/public/portfolio.css
+++ b/public/portfolio.css
@@ -91,7 +91,7 @@ nav.header {
   border: #434343 medium 4px;
   background-image: var(--backgroundImage);
   border-radius: 10px;
-  padding: 15px;
+  padding: 2em;
   box-shadow: 30px 15px 15px #00000091;
 }
 .aboutMe > p {
@@ -155,9 +155,10 @@ nav.header {
   border-radius: 10px;
 }
 
-div.col {
-  margin-top: 1.5em;
+div.row {
+  margin: 1.5em auto;
 }
+
 .form-control,
 .btn {
   box-shadow: 30px 15px 15px #00000091;
@@ -196,5 +197,22 @@ div.col {
     max-width: 100%;
     margin: 10px;
     padding: 10px;
+  }
+}
+
+@media screen and (min-width: 650px) {
+  .Technologies div.col {
+    font-size: 1.3em;
+  }
+}
+
+@media screen and (min-width: 850px) {
+  .Technologies div.col {
+    font-size: 1.4em;
+    margin: auto;
+  }
+
+  .Technologies {
+    max-width: 50%;
   }
 }
